Fix more issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 input.file = C:\\Users\\dapaj\\IdeaProjects\\facturacion\\src\\main\\resources\\example.csv
 output.dir = C:\\Users\\dapaj\\IdeaProjects\\facturacion\\src\\main\\resources\\out\\
+fecha.de.pago = 2021-02-25
