--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-input.file = C:\\Users\\dapaj\\IdeaProjects\\facturacion\\src\\main\\resources\\example.csv
-output.dir = C:\\Users\\dapaj\\IdeaProjects\\facturacion\\src\\main\\resources\\out\\
-fecha.de.pago = 2021-02-25
+input.file = /Users/user/Documents/aura/urb.projects.facturas/src/main/resources/example.csv
+output.dir = ~/out/
+fecha.de.pago = 2021-06-24
+spring.http.multipart.enabled=true
