--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ input.file = /Users/user/Documents/aura/urb.projects.facturas/src/main/resources
 output.dir = ~/out/
 fecha.de.pago = 2021-06-24
 spring.http.multipart.enabled=true
+server.servlet.context-path=/api
+
