--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ output.dir = ~/out/
 fecha.de.pago = 2021-06-24
 spring.http.multipart.enabled=true
 server.servlet.context-path=/api
-
+spring.codec.max-in-memory-size=2MB
