--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-input.file = /Users/user/Documents/aura/urb.projects.facturas/src/main/resources/example.csv
-output.dir = ~/out/
-fecha.de.pago = 2021-06-24
 spring.http.multipart.enabled=true
 server.servlet.context-path=/api
 spring.codec.max-in-memory-size=2MB
+
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Posawds23t.
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
